--- a/attendance.html.html
+++ b/attendance.html.html
@@ -244,8 +244,8 @@
                 <label>Выберите секцию</label>
                 <select id="sectionSelect" onchange="loadFloorStudents()">
                     <option value="">Все секции</option>
-                    <option value="1">Секция 1</option>
-                    <option value="2">Секция 2</option>
+                    <option value="А">Секция А</option>
+                    <option value="Б">Секция Б</option>
                 </select>
             </div>
             <div class="form-group">
@@ -352,12 +352,145 @@
 
         // Данные студентов
         const allStudents = [
-            {id: 1, fullName: "Кудрявцева Е В25", room: "201А", floor: "2", group: "В25", status: STATUS.NONE},
-            {id: 2, fullName: "Зайцева В П14", room: "201А", floor: "2", group: "П14", status: STATUS.NONE},
-            {id: 3, fullName: "Бадикова Р К14", room: "201А", floor: "2", group: "К14", status: STATUS.NONE},
-            {id: 4, fullName: "Печенцова С", room: "201Б", floor: "2", group: "Не указана", status: STATUS.NONE},
-            {id: 5, fullName: "Лючинша", room: "201Б", floor: "2", group: "Не указана", status: STATUS.NONE},
-            // ... продолжаем список для всех студентов
+  {id: 1, fullName: "Кудрявцева Е В25", room: "201А", floor: "2", group: "В25", status: STATUS.NONE},
+  {id: 2, fullName: "Зайцева В П14", room: "201А", floor: "2", group: "П14", status: STATUS.NONE},
+  {id: 3, fullName: "Бадикова Р К14", room: "201А", floor: "2", group: "К14", status: STATUS.NONE},
+  {id: 4, fullName: "Печенцова С", room: "201Б", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 5, fullName: "Лючинша", room: "201Б", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 6, fullName: "Бичинова Л", room: "201Б", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 7, fullName: "Тенгерекова", room: "201Б", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 8, fullName: "Бергер Ю", room: "202А", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 9, fullName: "Евстратова В К13", room: "202А", floor: "2", group: "К13", status: STATUS.NONE},
+  {id: 10, fullName: "Сыренко А К12", room: "202Б", floor: "2", group: "К12", status: STATUS.NONE},
+  {id: 11, fullName: "Тетушкина А К12", room: "202Б", floor: "2", group: "К12", status: STATUS.NONE},
+  {id: 12, fullName: "Киселева С К12", room: "202Б", floor: "2", group: "К12", status: STATUS.NONE},
+  {id: 13, fullName: "Перепелицина А К12", room: "202Б", floor: "2", group: "К12", status: STATUS.NONE},
+  {id: 14, fullName: "Кривощекова Т Т313", room: "203А1", floor: "2", group: "Т313", status: STATUS.NONE},
+  {id: 15, fullName: "Бектирова Т314", room: "203А1", floor: "2", group: "Т314", status: STATUS.NONE},
+  {id: 16, fullName: "Коспокова Э", room: "203А2", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 17, fullName: "Шубина", room: "203А2", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 18, fullName: "Мамашева", room: "203Б", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 19, fullName: "Малькова", room: "203Б", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 20, fullName: "Голова", room: "203Б", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 21, fullName: "Недобежкина", room: "211А", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 22, fullName: "Толстова", room: "211А", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 23, fullName: "Одинамамадова", room: "211Б", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 24, fullName: "Донгак", room: "211Б", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 25, fullName: "Чеснокова", room: "211Б", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 26, fullName: "Дилеков", room: "215А", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 27, fullName: "Джумажанов", room: "215А", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 28, fullName: "Кокпашев", room: "215А", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 29, fullName: "Махомета", room: "215Б", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 30, fullName: "Улагашев", room: "215Б", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 31, fullName: "Кречетов", room: "215Б", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 32, fullName: "Самиев", room: "215Б", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 33, fullName: "Карпов", room: "220А", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 34, fullName: "Кириллов", room: "220А", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 35, fullName: "Лошаков", room: "220Б", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 36, fullName: "Саблаков", room: "220Б", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 37, fullName: "Иркитов", room: "220Б", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 38, fullName: "Самаев", room: "220Б", floor: "2", group: "Не указана", status: STATUS.NONE},
+  {id: 39, fullName: "Сырых !!!", room: "301А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 40, fullName: "Шульгин", room: "301А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 41, fullName: "Матин", room: "301Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 42, fullName: "Кукпенеков", room: "301Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 43, fullName: "Бедюров", room: "301Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 44, fullName: "Альчин", room: "302А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 45, fullName: "Булбанов", room: "302А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 46, fullName: "Альчин", room: "302А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 47, fullName: "Бахтушкин", room: "302Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 48, fullName: "Юнхунов", room: "302Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 49, fullName: "Филимонов !!!", room: "302Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 50, fullName: "Сергеева (кош)", room: "303А1", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 51, fullName: "Березикова", room: "303Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 52, fullName: "Попошева", room: "303Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 53, fullName: "Антонова", room: "303Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 54, fullName: "Забельникова", room: "303Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 55, fullName: "Еремеев", room: "304Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 56, fullName: "Саксаев !!!", room: "304Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 57, fullName: "Корнилов", room: "304А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 58, fullName: "Плетнев", room: "304А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 59, fullName: "Кульзенов", room: "304А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 60, fullName: "Сырых", room: "305А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 61, fullName: "Скороходов", room: "305Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 62, fullName: "Максимов", room: "305Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 63, fullName: "Угничев", room: "305Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 64, fullName: "Бабаев", room: "305Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 65, fullName: "Мажо", room: "307А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 66, fullName: "Одонова", room: "307А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 67, fullName: "Гумарова", room: "307Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 68, fullName: "Доржу", room: "307Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 69, fullName: "Битуганова", room: "307Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 70, fullName: "Емильянова", room: "307Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 71, fullName: "Дмитриева", room: "308А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 72, fullName: "Поткина", room: "308А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 73, fullName: "Вьюненко", room: "308А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 74, fullName: "Токмашова", room: "308Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 75, fullName: "Савченко", room: "308Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 76, fullName: "Соловьева", room: "308Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 77, fullName: "Адыкаева", room: "308Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 78, fullName: "Пушкина", room: "309А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 79, fullName: "Сергеевна", room: "309А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 80, fullName: "Романова !!!", room: "309Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 81, fullName: "Магомодова !!!", room: "309Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 82, fullName: "Акулова !!!", room: "309Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 83, fullName: "Афанасьева", room: "309Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 84, fullName: "Медведева", room: "310А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 85, fullName: "Карасова", room: "310А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 86, fullName: "Черепанова", room: "310Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 87, fullName: "Кондыкова", room: "310Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 88, fullName: "Якимченко", room: "310Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 89, fullName: "Шадрина", room: "310Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 90, fullName: "Акчинов", room: "311А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 91, fullName: "Яилгаков", room: "311А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 92, fullName: "Чигжит", room: "311Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 93, fullName: "Очуртов !!!", room: "311Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 94, fullName: "Кангинов", room: "311Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 95, fullName: "Юнхунов Э !", room: "311Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 96, fullName: "Арбаев", room: "312А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 97, fullName: "Юнхунов И", room: "312А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 98, fullName: "Кебеков", room: "312Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 99, fullName: "Енчинов", room: "312Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 100, fullName: "Чучин", room: "312Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 101, fullName: "Иркитов", room: "312Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 102, fullName: "Крачнакова", room: "313А1", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 103, fullName: "Новикова", room: "313А2", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 104, fullName: "Анчина", room: "313Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 105, fullName: "Кыдатова", room: "313Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 106, fullName: "Казакова", room: "313Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 107, fullName: "Делтокова", room: "313Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 108, fullName: "Федоров", room: "314А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 109, fullName: "Субботин", room: "314А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 110, fullName: "Сафронов", room: "314А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 111, fullName: "Яжанкин", room: "314Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 112, fullName: "Тадышев", room: "314Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 113, fullName: "Белеков", room: "314Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 114, fullName: "Решетов", room: "314Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 115, fullName: "Майманов", room: "315А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 116, fullName: "Уйгулуков", room: "315А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 117, fullName: "Иргит", room: "315А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 118, fullName: "Сегерткышев", room: "315Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 119, fullName: "Чирков", room: "315Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 120, fullName: "Лобанов", room: "315Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 121, fullName: "Топтыгин", room: "318А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 122, fullName: "Левин", room: "318А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 123, fullName: "Пан", room: "318А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 124, fullName: "Миркулеев", room: "318Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 125, fullName: "Вахидов", room: "318Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 126, fullName: "Кузьмин", room: "318Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 127, fullName: "Мирханов", room: "318Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 128, fullName: "Жукова", room: "320А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 129, fullName: "Семендеева", room: "320А", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 130, fullName: "Шустинская", room: "320Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 131, fullName: "Рожкова", room: "320Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 132, fullName: "Козлова", room: "320Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 133, fullName: "Сотникова", room: "320Б", floor: "3", group: "Не указана", status: STATUS.NONE},
+  {id: 134, fullName: "Канысова", room: "513А1", floor: "5", group: "Не указана", status: STATUS.NONE},
+  {id: 135, fullName: "Малчинова", room: "513А1", floor: "5", group: "Не указана", status: STATUS.NONE},
+  {id: 136, fullName: "Бочкарева", room: "513А2", floor: "5", group: "Не указана", status: STATUS.NONE},
+  {id: 137, fullName: "Глушкова", room: "513А2", floor: "5", group: "Не указана", status: STATUS.NONE},
+  {id: 138, fullName: "Бологова", room: "513Б", floor: "5", group: "Не указана", status: STATUS.NONE},
+  {id: 139, fullName: "Кураганова", room: "513Б", floor: "5", group: "Не указана", status: STATUS.NONE},
         ];
 
         let currentStudents = [];
