--- a/index.html.html
+++ b/index.html.html
@@ -126,37 +126,37 @@
         </div>
 
         <div class="nav-grid">
-            <a href="students-list.html" class="nav-card">
+            <a href="C:\Users\ASUS\Desktop\Диспетчер Общежития\students-list.html.html" class="nav-card">
                 <div class="nav-icon">👥</div>
                 <h3>Студенты</h3>
                 <p>База данных студентов</p>
             </a>
 
-            <a href="attendance.html" class="nav-card">
+            <a href="C:\Users\ASUS\Desktop\Диспетчер Общежития\attendance.html.html" class="nav-card">
                 <div class="nav-icon">✅</div>
                 <h3>Вечерняя отметка</h3>
                 <p>Контроль присутствия</p>
             </a>
 
-            <a href="violations.html" class="nav-card">
+            <a href="C:\Users\ASUS\Desktop\Диспетчер Общежития\violations.html.html" class="nav-card">
                 <div class="nav-icon">⚠️</div>
                 <h3>Нарушения</h3>
                 <p>Учет нарушений правил</p>
             </a>
 
-            <a href="statements.html" class="nav-card">
+            <a href="C:\Users\ASUS\Desktop\Диспетчер Общежития\statements.html.html" class="nav-card">
                 <div class="nav-icon">📋</div>
                 <h3>Заявления</h3>
                 <p>Заявления студентов</p>
             </a>
 
-            <a href="reports.html" class="nav-card">
+            <a href="C:\Users\ASUS\Desktop\Диспетчер Общежития\reports.html.html" class="nav-card">
                 <div class="nav-icon">📊</div>
                 <h3>Отчеты</h3>
                 <p>Отчеты для начальства</p>
             </a>
 
-            <a href="import-students.html" class="nav-card">
+            <a href="C:\Users\ASUS\Desktop\Диспетчер Общежития\import-students.html.html" class="nav-card">
                 <div class="nav-icon">📥</div>
                 <h3>Импорт данных</h3>
                 <p>Массовое добавление</p>
